[package]
name = "sumo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A TUI app for displaying sumo basho bouts and results"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
